force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Created_DateTime_fmla__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Created_DateTime_fmla__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created DateTime</label>
    <type>DateTime</type>
</CustomField>