force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Detail__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Detail__c</fullName>
    <description>Detail message for the event log</description>
    <label>Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>