force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Message__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Message__c</fullName>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>