force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Message_Long__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Message_Long__c</fullName>
    <description>Long text replacement for Message field, because sometimes the error is longer than 255 characters</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>