force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Process_Name__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Process_Name__c</fullName>
    <description>name of the Apex Class / Process which has logged this message</description>
    <label>Process Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ChatSyncJob</fullName>
            </value>
            <value>
                <fullName>ChatSyncController</fullName>
            </value>
            <value>
                <fullName>ChatLinkController</fullName>
            </value>
            <value>
                <fullName>EngagementResponse</fullName>
            </value>
            <value>
                <fullName>EngagementRequest</fullName>
            </value>
            <value>
                <fullName>InstallationScript</fullName>
            </value>
            <value>
                <fullName>LivePersonApiConnector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>