force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Request__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Request__c</fullName>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>