force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Request_Url__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Request_Url__c</fullName>
    <label>Request Url</label>
    <type>Url</type>
</CustomField>