force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Response__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Response__c</fullName>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>