force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Response_Status__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Response_Status__c</fullName>
    <label>Response Status</label>
    <type>TextArea</type>
</CustomField>