force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Response_Status_Code__c</fullName>
    <label>Response Status Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>