force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Status__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>