force-app/main/default/objects/LiveEngage__Event_Log__c/fields/LiveEngage__Subprocess_Name__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Subprocess_Name__c</fullName>
    <label>Subprocess Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>