force-app/main/default/objects/LiveEngage__Event_Log__c/listViews/LiveEngage__All.listView-meta.xml
<ListView>
    <fullName>LiveEngage__All</fullName>
    <columns>NAME</columns>
    <columns>LiveEngage__Status__c</columns>
    <columns>LiveEngage__Process_Name__c</columns>
    <columns>LiveEngage__Subprocess_Name__c</columns>
    <columns>LiveEngage__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LiveEngage__Created_DateTime_fmla__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>