force-app/main/default/objects/LiveEngage__Event_Log__c/listViews/LiveEngage__Callout_Errors.listView-meta.xml
<ListView>
    <fullName>LiveEngage__Callout_Errors</fullName>
    <columns>NAME</columns>
    <columns>LiveEngage__Process_Name__c</columns>
    <columns>LiveEngage__Subprocess_Name__c</columns>
    <columns>LiveEngage__Message__c</columns>
    <columns>LiveEngage__Response_Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LiveEngage__Response_Status_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Callout Errors</label>
</ListView>