force-app/main/default/objects/LiveEngage__Event_Log__c/listViews/LiveEngage__Recent.listView-meta.xml
<ListView>
    <fullName>LiveEngage__Recent</fullName>
    <columns>NAME</columns>
    <columns>LiveEngage__Status__c</columns>
    <columns>LiveEngage__Process_Name__c</columns>
    <columns>LiveEngage__Subprocess_Name__c</columns>
    <columns>LiveEngage__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LiveEngage__Created_DateTime_fmla__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LiveEngage__Created_DateTime_fmla__c</field>
        <operation>greaterThan</operation>
        <value>12/26/2018 2:45 PM</value>
    </filters>
    <label>Recent</label>
</ListView>